[package]
name = "tuf"
version = "0.1.0"
authors = ["luiq54 <dev.darshanphaldesai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "0.8.5"
log= "0.4.8"
glib= "0.10.1"
gtk= "0.9.0"
gtk-sys= "0.10.0"
libappindicator-sys= "0.5.0"
libappindicator = "0.5.2"
